<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single"
        android:orderInCategory="0">
        <item
            android:id="@+id/navigation_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/navigation_motivation"
            android:title="@string/motivation"
            android:icon="@drawable/ic_bulb"/>
        <item
            android:id="@+id/navigation_help"
            android:title="@string/help"
            android:icon="@drawable/ic_help"/>
    </group>
    <group
        android:id="@+id/group_other"
        android:checkableBehavior="none"
        android:orderInCategory="1">
        <item
            android:id="@+id/navigation_add_list"
            android:title="@string/add_list"
            android:icon="@drawable/ic_add"/>
    </group>
    <group
        android:id="@+id/group_lists"
        android:checkableBehavior="single"
        android:orderInCategory="2">
    </group>
</menu>