<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".views.android.AddTaskActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CardTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/add_task_image_view_task_state"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_box"
                android:layout_margin="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/edit_text_task_title"
                app:layout_constraintBottom_toBottomOf="@id/edit_text_task_title"/>

            <EditText
                android:id="@+id/edit_text_task_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:layout_margin="5dp"
                app:layout_constraintLeft_toRightOf="@id/add_task_image_view_task_state"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/button_task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="11sp"
                android:drawableTop="@drawable/ic_description"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"/>

            <Button
                android:id="@+id/button_task_date"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="11sp"
                android:drawableTop="@drawable/ic_calendar"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:layout_constraintLeft_toRightOf="@id/button_task_description"
                app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"
                app:layout_constraintRight_toLeftOf="@id/button_task_file"/>

            <Button
                android:id="@+id/button_task_file"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:textSize="11sp"
                android:drawableTop="@drawable/ic_file"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:layout_constraintLeft_toRightOf="@id/button_task_date"
                app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"
                app:layout_constraintRight_toLeftOf="@id/button_task_color"/>

            <Button
                android:id="@+id/button_task_color"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textSize="11sp"
                android:drawableTop="@drawable/ic_color_palette"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/text_view_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:textColor="?attr/colorSecondary"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/button_task_file"
                app:layout_constraintRight_toLeftOf="@id/text_view_save"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text_view_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="15sp"
                android:textColor="?attr/colorSecondary"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/button_task_color"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>