<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_text_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_list_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon"
        android:textSize="13sp"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_smile"
        style=""
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_list_title"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_list_icons"/>

    <Button
        android:id="@+id/button_list_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="13sp"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_color_palette"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@id/button_list_icon"
        app:layout_constraintTop_toBottomOf="@id/edit_text_list_title"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_list_colors"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/button_list_icon"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/button_list_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>